--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,16 @@
         font-size: .75em;
      }
 
+     .invalid {
+        color: hsl(0, 100%, 74%);
+        background-image: url("../images/icon-error.svg");
+        background-repeat: no-repeat;
+        background-size:20px;
+        background-position-x:95%;
+        background-position-y: 50%;
+        border-color:hsl(0, 100%, 74%); 
+     }
+
      .hide {
        display: none;
      }
@@ -160,22 +170,19 @@
          color: #fff;
          text-transform: uppercase;
          cursor: pointer;
+         border-color: hsl(154, 59%, 51%);
      }
 
      .first-name-alert, 
      .last-name-alert,
-     .password-alert {
+     .password-alert,
+     .email-alert {
        color:hsl(0, 100%, 74%);
        text-align: right;
        font-style: italic;
        font-size: .75em;
+       font-weight: 400;
        margin-bottom: 20px;
-     }
-
-     .error-icon {
-      height: 24px;
-      width: 24px;
-      align-content: right;
      }
 
      .terms {
